# ECE4191G11

./: .gitignore  README.md  ssh.txt
ROS/install/: local_setup.sh  setup.sh
ROS/log/: latest  latest_build  latest_list  latest_metadata
ROS/src/robot_controller/: package.xml  setup.py
ROS/src/robot_controller/robot_controller/: drive.py  encoder.py  map.py  path_planner.py  ultrasonic.py
ROS/src/robot_interfaces/: CMakeLists.txt
ROS/src/test_robot_controller/: setup.py
ROS_PC/install/: local_setup.sh  setup.sh
ROS_PC/log/: latest_build  latest_list
ROS_PC/src/robot_controller/: package.xml  setup.py
ROS_PC/src/robot_interfaces/: CMakeLists.txt
ROS_Pi/install/: local_setup.sh  setup.sh
ROS_Pi/log/: latest_build
ROS_Pi/src/robot_controller/: setup.py
ROS_Pi/src/robot_interfaces/: CMakeLists.txt  package.xml
ROS_Pi/src/robot_launch/: CMakeLists.txt
SCR/: TODO.txt  compass.cal  compass.py  compass_cal.py  drive.py  led.py  limit_switch.py  mag3110.py  map.py  motor.py  path_smoothing.py  qr_test.py  ros_plan.txt  servo.py  servo_180.py  test.py  test_code_rpi.py  test_motor.py  ultrasonic.py  ultrasonic_test.py  vis_test.py
SCR/path_planning_files/: bit.py  env.py  path_smoothing.py  plotting.py  rrt.py  utils.py
SCR/path_planning_sample_based/: bit.py  map.py  rrtc.py
SCR/path_planning_search_based/: Astar.py  d_star_lite.py  env_dstar.py  path_smoothing.py  plotting.py
config/: rpi2_teamview_config.txt  ssh_config.txt
ros2_ws/install/: local_setup.sh
ros2_ws/log/: latest_build  latest_list
(+207 files in other folders)
